--- a/app/views/organized/lines/show.html.haml
+++ b/app/views/organized/lines/show.html.haml
@@ -34,7 +34,7 @@
             %label.d-block &nbsp;
             = f.submit "Add to line!", class: "btn btn-success"
 
-- valid_update_statuses = [["Manually remove from line", "removed"], ["Being helped", "being_helped"], ["Left without being helped", "abandoned"], ["Page - they're needed", "paging"], ["On deck", "on_deck"], ["Waiting in line", "waiting"], ["Unable to find", "failed_to_find"]]
+- valid_update_statuses = [["Being helped", "being_helped"], ["Manually remove from line", "removed"], ["Left without being helped", "abandoned"], ["Page - they're needed", "paging"], ["On deck", "on_deck"], ["Waiting in line", "waiting"], ["Unable to find", "failed_to_find"]]
 -# Form needs to wrap the table to get the checked appointment ids
 = form_tag organization_line_path(current_location.to_param, organization_id: current_organization.to_param), id: "multiAppointmentSelectForm", method: :put, action: "update" do
 
@@ -42,7 +42,6 @@
     .row.mt-4
       .col-xs-6
         .form-group
-          - valid_update_statuses = [["Manually remove from line", "removed"], ["Being helped", "being_helped"], ["Left without being helped", "abandoned"], ["Page - they're needed", "paging"], ["On deck", "on_deck"], ["Waiting in line", "waiting"], ["Unable to find", "failed_to_find"]]
           = select_tag :status, options_for_select(valid_update_statuses), required: true , class: "form-control"
       .col-xs-6
         .form-group
@@ -105,16 +104,16 @@
                 %small.less-strong= appointment.description
             %td.text-center
               - if appointment.paging?
-                = link_to "helping", organization_appointment_path(appointment.to_param, organization_id: current_organization.id, status: "being_helped"), method: "PUT", action: "update", class: "btn btn-sm btn-success uncap mb-2"
+                = link_to "helped", organization_appointment_path(appointment.to_param, organization_id: current_organization.id, status: "being_helped"), method: "PUT", action: "update", class: "btn btn-sm btn-success uncap mb-2"
               - elsif appointment.on_deck?
-                = link_to "Page", organization_appointment_path(appointment.to_param, organization_id: current_organization.id, status: "paging"), method: "PUT", action: "update", class: "btn btn-sm btn-success uncap mb-2"
+                = link_to "Page", organization_appointment_path(appointment.to_param, organization_id: current_organization.id, status: "paging"), method: "PUT", action: "update", class: "btn btn-sm btn-outline-success uncap mb-2"
             %td.text-center
               - if appointment.paging?
                 = link_to "can't find", organization_appointment_path(appointment.to_param, organization_id: current_organization.id, status: "failed_to_find"), method: "PUT", action: "update", class: "btn btn-sm btn-warning uncap ml-2 mb-2"
-              %small.less-strong
+              %small.d-block.dropdown.dropleft.update-status-dropdown
                 %a.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false" }
                   update status
-                .dropdown-menu
+                .dropdown-menu.dropleft
                   - valid_update_statuses.each do |status_display, val|
-                    = link_to status_display, organization_appointment_path(appointment.to_param, organization_id: current_organization.id, status: val), method: "PUT", action: "update"
+                    = link_to status_display, organization_appointment_path(appointment.to_param, organization_id: current_organization.id, status: val), method: "PUT", action: "update", class: "dropdown-item"
 
