bad word cleaner

--- a/app/views/layouts/walkrightup.html.haml
+++ b/app/views/layouts/walkrightup.html.haml
@@ -30,7 +30,7 @@
               %ul
                 - @appointments_in_line.paging_or_on_deck.each do |appointment|
                   %li
-                    = appointment.first_user_display_name
+                    = appointment.first_display_name
                     - if appointment.paging?
                       %em.text-warning #{current_organization.short_name} is ready for them!
 
