--- a/app/views/organized/lines/show.html.haml
+++ b/app/views/organized/lines/show.html.haml
@@ -34,6 +34,7 @@
             %label.d-block &nbsp;
             = f.submit "Add to line!", class: "btn btn-success"
 
+- valid_update_statuses = [["Being helped", "being_helped"], ["Manually remove from line", "removed"], ["Left without being helped", "abandoned"], ["Page - they're needed", "paging"], ["On deck", "on_deck"], ["Waiting in line", "waiting"], ["Unable to find", "failed_to_find"]]
 -# Form needs to wrap the table to get the checked appointment ids
 = form_tag organization_line_path(current_location.to_param, organization_id: current_organization.to_param), id: "multiAppointmentSelectForm", method: :put, action: "update" do
 
@@ -41,7 +42,6 @@
     .row.mt-4
       .col-xs-6
         .form-group
-          - valid_update_statuses = [["Manually remove from line", "removed"], ["Being helped", "being_helped"], ["Left without being helped", "abandoned"], ["Page - they're needed", "paging"], ["On deck", "on_deck"], ["Waiting in line", "waiting"], ["Unable to find", "failed_to_find"]]
           = select_tag :status, options_for_select(valid_update_statuses), required: true , class: "form-control"
       .col-xs-6
         .form-group
@@ -73,7 +73,7 @@
               = appointment.name
               - if appointment.organization_member?
                 %small.less-strong
-                  added by #{appointment.user_display_name.split(" ").first}
+                  added by #{appointment.user&.first_display_name}
             %td
               - if appointment.waiting?
                 %span.less-strong in line
@@ -84,24 +84,36 @@
                 %ul.status-list
                   - appointment.appointment_updates.reorder(id: :desc).each do |appointment_update|
                     %li
-                      %em.less-strong
+                      %span.less-strong
                         #{appointment_update.status.gsub("_", " ")} -
                         -# It's too garish - but there needs to be some color differentiation
                         -# #{status_display(appointment_update.status)} -
 
-                      %span.convertTime.preciseTime
+                      %em.convertTime.preciseTime
                         = l(appointment_update.created_at, format: :convert_time)
                       %small
-                        by #{appointment_update.user_display_name}
+                        - if appointment_update.customer_creator?
+                          by
+                          %em customer
+                        - elsif appointment_update.user_id.present?
+                          by
+                          %em= appointment_update.user&.first_display_name
             %td
               = appointment.reason
               - if appointment.description.present?
                 %small.less-strong= appointment.description
             %td.text-center
               - if appointment.paging?
-                = link_to "helping", organization_appointment_path(appointment.to_param, organization_id: current_organization.id, status: "being_helped"), method: "PUT", action: "update", class: "btn btn-sm btn-success uncap mb-2"
+                = link_to "helped", organization_appointment_path(appointment.to_param, organization_id: current_organization.id, status: "being_helped"), method: "PUT", action: "update", class: "btn btn-sm btn-success uncap mb-2"
               - elsif appointment.on_deck?
-                = link_to "Page", organization_appointment_path(appointment.to_param, organization_id: current_organization.id, status: "paging"), method: "PUT", action: "update", class: "btn btn-sm btn-success uncap mb-2"
+                = link_to "Page", organization_appointment_path(appointment.to_param, organization_id: current_organization.id, status: "paging"), method: "PUT", action: "update", class: "btn btn-sm btn-outline-success uncap mb-2"
             %td.text-center
               - if appointment.paging?
                 = link_to "can't find", organization_appointment_path(appointment.to_param, organization_id: current_organization.id, status: "failed_to_find"), method: "PUT", action: "update", class: "btn btn-sm btn-warning uncap ml-2 mb-2"
+              %small.d-block.dropdown.dropleft.update-status-dropdown
+                %a.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false" }
+                  update status
+                .dropdown-menu.dropleft
+                  - valid_update_statuses.each do |status_display, val|
+                    = link_to status_display, organization_appointment_path(appointment.to_param, organization_id: current_organization.id, status: val), method: "PUT", action: "update", class: "dropdown-item"
+
